added og:tags, favicon, changed title, other minor tweaks and cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Technigo React App</title>
+    <meta name="description" content="Hjemmeside for Normfri terapi v. Rebekka Pi" />
+    <meta property="og:title" content="Normfri terapi v/ Rebekka Pi">
+    <meta property="og:type" content="website">
+    <meta property="og:img" content="https://graceful-ganache-e00973.netlify.app/static/media/head.a877ae387af6f05145af5fe96988d1b4.svg">
+    <meta property="og:url" content="https://graceful-ganache-e00973.netlify.app/">
+
+    <title>Normfri terapi</title>
+        <link rel="icon" href="/src/images/favicon.ico" />
   </head>
 
   <body>
