--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
   <head>
     <meta charset="utf-8" />
@@ -19,8 +19,8 @@
     <meta property="og:img" content="https://graceful-ganache-e00973.netlify.app/static/media/head.a877ae387af6f05145af5fe96988d1b4.svg">
     <meta property="og:url" content="https://graceful-ganache-e00973.netlify.app/">
 
-    <title>Normfri terapi</title>
-        <link rel="icon" href="/src/images/favicon.ico" />
+    <title>Normfri Terapi</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   </head>
 
   <body>
